add information about track ownership by current user